k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-python-service
spec:
  type: ClusterIP
  ports:
    - port: 8765
      targetPort: 8765
      protocol: TCP
  selector:
    app: demo-devops-python
