k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-devops-python-ingress
  namespace: namespace-devops-python

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: demo-devops-python.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-devops-python-service
                port:
                  number: 8765
